Fixed overflow and block with phones

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -15,7 +15,7 @@
 }
 
 body {
-  font-family: "Roboto", san-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
   line-height: 18px;
   background-color: #eeeeee;
