--- a/src/scss/blocks/container.scss
+++ b/src/scss/blocks/container.scss
@@ -1,11 +1,16 @@
 .container {
     display: flex;
-    padding: 20px 17px 20px 66px;
+    padding: 20px 17px 0 66px;
     .contacts-wrap {
         flex-grow: 1;
+        flex-basis: 367px;
+        min-width: 367px;
+        overflow: auto;
+        max-height: 830px;
         margin-right: 14px;
         padding-left: 81px;
         padding-top: 23px;
+        padding-bottom: 23px;
         background-color: #ffffff;
         border-radius: 2px;
         box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.16), 
@@ -82,7 +87,7 @@
     }
 
     .contacts-details {
-        height: 776px;
+        flex-basis: 432px;
         background-color: #ffffff;
         border-radius: 2px;
         box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.16), 
@@ -90,44 +95,45 @@
     }
     .image-wrap {
         position: relative;
+        width: 432px;
+        height: 246px;
         img {
-            display: block;
+            position: absolute;
         }
     }
+    .all-btns-wrap {
+        display: flex;
+        justify-content: space-between;
+        padding: 25px 16px 0 25px;
+    }
+
     .btn-back {
-        position: absolute;
-        width: 16px;
-        left: 25px;
-        height: 16px;
-        top: 25px;
+        z-index: 10;
+    }
+    .btn-wrap {
+        z-index: 10;
     }
     .btn-edit {
         @extend %borderless-btn;
-        position: absolute;
-        top: 25px;
-        right: 64px; 
-    }
-    .btn-more {
-        @extend %borderless-btn;
-        position: absolute;
-        top: 25px;
-        right: 27px;
+        margin-right: 20px;
     }
     .image-text {
         position: absolute;
-        left: 26px;
-        bottom: 18px;
+        bottom: 21px;
+        left: 25px;
         font-size: 2.2em;
         line-height: 28px;
         color: #ffffff;
     }
 
     .info-wrap {
+        overflow: auto;
+        max-height: 830px;
         padding-top: 41px;
         padding-left: 84px;
     }    
     .phone-list {
-        @include ul-style($padding: 0 0 23px 0);
+        @include ul-style();
         border-bottom: 1px solid #d6d5d5;
         .phone-item {
             background-image: url("../img/hangout.svg");
@@ -138,6 +144,7 @@
     .phone-item {
         position: relative;
         padding-right: 22px;
+        margin-bottom: 23px;
         &.call {
             margin-bottom: 32px;
         }
@@ -165,11 +172,12 @@
         color: #999999;
     }
     .address-list {
-        @include ul-style($padding: 23px 0 20px 0);
+        @include ul-style($padding: 23px 0 0 0);
     }
     .address-item {
         position: relative;
-        &.post {
+        &.post,
+        &.work {
             margin-bottom: 31px;
         }
         &.post-work {
@@ -177,6 +185,12 @@
         }
         &.home {
             margin-bottom: 25px;
+        }
+    }
+    .address-item,
+    .phone-item {
+        span {
+            display: block;
         }
     }
     .address-link {
